--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "axios": "^1.6.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
-    "express": "^4.18.3"
+    "express": "^4.18.3",
+    "firebase": "^10.8.0",
+    "firebase-admin": "^12.0.0"
   }
 }
